--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
         <div class="share">
             <a href="" class="fab fa-facebook-f"></a>
             <a href="https://wa.me/6285237919654" class="fab fa-whatsapp"></a>
-            <a href="https://www.instagram.com/luxury_computer_official?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" class="fab fa-instagram"></a>
+            <a href="https://www.instagram.com/skate_bulls_official?igsh=MXczcGRreW8xNmVxcw== " class="fab fa-instagram"></a>
         </div>
         <div class="credit">
             created by <span>Wisnu Aditya</span>Copyright 2024 
